admin panel two pages done & password show in all password field

--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -13,20 +13,24 @@
                 </div>
                 <form class="join_form forgot_pwd_form " [formGroup]="forgotPasswordForm" autocomplete="off">
                     <div class="form-group">
-                        <div class="input-group">
-                            <input type="password" class="form-control" formControlName="newPassword"
-                                placeholder="New Password">
+                        <div class="input-group input_with_icont">
+                            <input type="password" class="form-control" id="pwd1" formControlName="newPassword"
+                                placeholder="New Password" [type]="show1 ? 'text' : 'password'">
+                                <span toggle="#password-field" class="fa fa-fw fa-eye-slash field-icon toggle-password"
+                                    (click)="password1()"></span>
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="input-group">
-                            <input type="password" class="form-control" formControlName="confirmPassword"
-                                (input)="comparePassword(forgotPasswordForm)" placeholder="Confirm Password">
+                        <div class="input-group input_with_icont">
+                            <input type="password" class="form-control" id="pwd2" formControlName="confirmPassword"
+                                (input)="comparePassword(forgotPasswordForm)" placeholder="Confirm Password" [type]="show2 ? 'text' : 'password'">
+                                <span toggle="#password-field" class="fa fa-fw fa-eye-slash field-icon toggle-password"
+                                    (click)="password2()"></span>
                         </div>
                     </div>
                     <div class="btn_submit_pwd">
                         <button class="btn text-white text-center submit_btn_pwd text-center" type="button" (click)="resetPassword()"
-                            [disabled]="forgotPasswordForm.invalid">Submit</button>
+                            [disabled]="forgotPasswordForm.invalid || isDisable">Submit</button>
                     </div>
                 </form>
             </div>
