--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -12,7 +12,8 @@
                         <div class="new_event_sec">
                             <div class="row">
                                 <div class="col-3 m-auto pr-0 float-right new_event_menu">
-                                    <a href="javascript:void(0)" class="closebtn"><img src="/assets/images/reset_pwd_icon.png"></a>
+                                    <a href="javascript:void(0)" class="closebtn"><img
+                                            src="/assets/images/reset_pwd_icon.png"></a>
                                     <p class="text-white">Reset Password</p>
                                 </div>
                                 <div class="col-9 p-0">
@@ -25,18 +26,21 @@
                                 <div class="event_menu">
                                     <div class="all_menu_content  d-flex flex-wrap align-content-center">
                                         <ul>
-                                                <li><a routerLink="/home" class="text-white text-center my_account">Home</a></li>
+                                            <li><a routerLink="/home" class="text-white text-center my_account">Home</a>
+                                            </li>
                                             <li><a routerLink="/myEvent" class="text-white text-center new_event">my
-                                                event</a>
-                                        </li>
-                                        <li><a routerLink="/createEvent" class="text-white text-center my_event">new
-                                                event</a></li>
-                                        <li><a routerLink="/bankDetails" class="text-white text-center my_account">bank
-                                                account</a>
-                                        </li>
-                                        
-                                        <li><a (click)="logout()" class="text-white text-center my_account">Logout</a>
-                                        </li>
+                                                    event</a>
+                                            </li>
+                                            <li><a routerLink="/createEvent" class="text-white text-center my_event">new
+                                                    event</a></li>
+                                            <li><a routerLink="/bankDetails"
+                                                    class="text-white text-center my_account">bank
+                                                    account</a>
+                                            </li>
+
+                                            <li><a (click)="logout()"
+                                                    class="text-white text-center my_account">Logout</a>
+                                            </li>
                                         </ul>
                                     </div>
                                 </div>
@@ -45,27 +49,34 @@
                     </div>
                     <form class="join_form forgot_pwd_form mt-3" [formGroup]="resetPasswordForm" autocomplete="off">
                         <div class="form-group">
-                            <div class="input-group">
+                            <div class="input-group input_with_icont">
                                 <input type="password" class="form-control" id="pwd3" placeholder="Current Password"
-                                formControlName="currentPassword" name="pwd1">
+                                    formControlName="currentPassword" name="pwd3" [type]="show3 ? 'text' : 'password'">
+                                <span toggle="#password-field" class="fa fa-fw fa-eye-slash field-icon toggle-password"
+                                    (click)="password3()"></span>
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="input-group">
+                            <div class="input-group input_with_icont">
                                 <input type="password" class="form-control" id="pwd1" placeholder="New Password"
-                                formControlName="newPassword" name="pwd1">
+                                    formControlName="newPassword" name="pwd1" [type]="show1 ? 'text' : 'password'">
+                                <span toggle="#password-field" class="fa fa-fw fa-eye-slash field-icon toggle-password"
+                                    (click)="password1()"></span>
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="input-group">
+                            <div class="input-group input_with_icont">
                                 <input type="password" class="form-control" formControlName="confirmPassword"
-                                (input)="comparePassword(resetPasswordForm)" id="pwd2"
-                                placeholder="Confirm New Password" name="pwd2">
+                                    (input)="comparePassword(resetPasswordForm)" id="pwd2"
+                                    placeholder="Confirm New Password" name="pwd2" [type]="show2 ? 'text' : 'password'">
+                                <span toggle="#password-field" class="fa fa-fw fa-eye-slash field-icon toggle-password"
+                                    (click)="password2()"></span>
                             </div>
                         </div>
                         <div class="btn_submit_pwd">
                             <button class="btn text-white text-center reset_pwd_btn submit_btn_pwd text-center"
-                            (click)="resetPassword()" [disabled]="resetPasswordForm.invalid || isDisable">Submit</button>
+                                (click)="resetPassword()"
+                                [disabled]="resetPasswordForm.invalid || isDisable">Submit</button>
                         </div>
                     </form>
                 </div>
