--- a/src/app/admin-user-list/admin-user-list.component.html
+++ b/src/app/admin-user-list/admin-user-list.component.html
@@ -3,7 +3,7 @@
     <img id="loading-image" src="/assets/images/loader.gif" alt="Loading..." />
 </div> 
 
-
+<!-- 
 <div class="container">
     <h1 class="text-center">User List </h1>
     <table class="table">
@@ -23,4 +23,24 @@
                 <td>{{list.mobile}}</td>
         </tbody>
     </table>
-</div>
+</div> -->
+
+
+<section class="total-user-table card">
+    <div class="table-responsive">
+        <table class="table">
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Email</th>
+                <th>Phone No</th>
+            </tr>
+            <tr *ngFor="let list of userList">
+                <td>{{list.firstName}}</td>
+                <td>{{list.lastName}}</td>
+                <td>{{list.email}}</td>
+                <td>{{list.mobile}}</td>
+            </tr>
+        </table>
+    </div>
+</section>
