--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,9 +9,9 @@
     <div class="sidebar">
       <ul>
         <li routerLink="admin-dashboard"><a><i class="fa fa-th-list" aria-hidden="true"></i><span>Dashboard</span></a></li>
-        <!-- <li routerLink="total-user"><a><i class="fa fa-th-list" aria-hidden="true"></i><span>Total Users</span></a></li>
+        <li routerLink="total-user"><a><i class="fa fa-th-list" aria-hidden="true"></i><span>Total Users</span></a></li>
         <li routerLink="total-event"><a><i class="fa fa-desktop"></i><span>Total Events</span></a></li>
-        <li><a><i class="fa fa-calendar"></i><span>Settings</span></a></li> -->
+        <li><a><i class="fa fa-calendar"></i><span>Settings</span></a></li>
         <li><a (click)="logout()"><i class="fa fa-th-list" aria-hidden="true"></i><span>LogOut</span></a></li>
       </ul>
     </div>
